Fix formatting in Brain_Tumor_Classification.ipynb

--- a/Brain_Tumor_Classification.ipynb
+++ b/Brain_Tumor_Classification.ipynb
@@ -4010,7 +4010,8 @@
         "# used for disconnecting the ngrok tunnels\n",
         " #tunnels = ngrok.get_tunnels()\n",
         " #for tunnel in tunnels:\n",
-        "   #ngrok.disconnect(tunnel.public_url)"
+        "   #ngrok.disconnect(tunnel.public_url)\n",
+        "   "
       ]
     }
   ],
