fix: update model file name to use .weights.h5 extension

--- a/Brain_Tumor_Classification.ipynb
+++ b/Brain_Tumor_Classification.ipynb
@@ -3739,7 +3739,7 @@
         "\n",
         "      if selected_model == \"Transfer Learning - Xception\":\n",
         "        with st.spinner('Generating prediction...'):\n",
-        "          model = load_xception_model('/content/trained_xception_model.h5')\n",
+        "          model = load_xception_model('/content/trained_xception_model.weights.h5')\n",
         "          img_size = (299, 299)\n",
         "      else:\n",
         "        with st.spinner('Generating prediction...'):\n",
