--- a/Brain_Tumor_Classification.ipynb
+++ b/Brain_Tumor_Classification.ipynb
@@ -2718,7 +2718,7 @@
       },
       "outputs": [],
       "source": [
-        "model.save_weights(\"trained_xception_model.h5\")"
+        "model.save_weights(\"trained_xception_model.weights.h5\")"
       ]
     },
     {
